--- a/test.html
+++ b/test.html
@@ -700,71 +700,7 @@ function removeNb (n) {
 }
 
 function smallest(n) {
-  var sindex,tindex;
-  var str = n.toString();
-  var digits = str.split('');
-  for(var i=0;i<digits.length;i++){
-    digits[i] = parseInt(digits[i]);
-  }
-  minMove(0);
-  var moved = digits[sindex];
-  digits.splice(sindex,1);
-  digits.splice(tindex,0,moved);
-  str = digits.join('');
-  var result = new Array();
-  result.push(Number(str));
-  result.push(sindex);
-  result.push(tindex);
-  return result;
-
-  function minMove(start){
-    var min = digits[start];
-    for(var j=start+1;j<digits.length;j++){
-      if(digits[j]<min){
-        min = digits[j];
-      }
-    }
-    var minindexes = new Array();
-    for(j=start;j<digits.length;j++){
-      if(digits[j]==min){
-        minindexes.push(j);
-      }
-    }
-    var minif = minindexes[0];
-    var minil = minindexes[minindexes.length-1];
-    for(j=minindexes.length-2;j>=0;j--){
-      if(minil==minindexes[j]+1){
-        minil = minil-1;
-      }else{
-        break;
-      }
-    }
-    var minil = digits.lastIndexOf(min);
-    if(minif==start&&minif==minil){
-      minMove(start+1);
-    }else if(minif==start+1){
-      sindex=start;
-      for(j=start+1;j<digits.length;j++){
-        if(digits[j]>=digits[start]){
-          tindex = j-1;
-          break;
-        }else if(j==digits.length-1){
-          tindex = j;
-        }        
-      }
-    }else{
-      if(minil==minif+1){
-        sindex = minif;
-      }else{
-        sindex = minil;
-      }      
-      tindex = start;
-    }
-  }  
-}
-console.log()
-
-function smallest(n) {
+  console.log(n);
   var sindex,tindex;
   var delcount =0;
   //convert to str and array
@@ -778,8 +714,9 @@ function smallest(n) {
   //delete the sorted numbers
   var min=Math.min.apply(null,digits);
   var lmin = findLastMinNotCon();
+  var fmin = findFirstMinNotCon();
   while(digits[0]==min){
-    if(lmin!=0){
+    if(lmin!=0&&lmin-fmin!=2){
       sindex = lmin+delcount;
       tindex = delcount;
       break;
@@ -788,43 +725,48 @@ function smallest(n) {
     delcount++;
     min = Math.min.apply(null,digits);
     lmin = findLastMinNotCon();
+    fmin = findFirstMinNotCon();
   }
   //全相同的返回原数
   if(digits.length==0){
-    var result = new Array();
-    result.push(n);
-    result.push(sindex);
-    result.push(tindex);
-    return result; 
+      if(digits.length==0){
+        sindex =0;
+        tindex =0;     
+      } 
   }
   //select the d that need to move
-  var md;
-
   if(sindex==undefined&&tindex==undefined){
     //move the first big num when the second is min and the third less than first
-    if(digits[1]==min&&digits[2]<digits[0]){   
+    if(lmin==1||(digits[1]==min&&digits[2]<digits[0])){   
       sindex = delcount;
       var di = 1;
       //choose the position to insert
       for(i=2;i<digits.length;i++){
         if(digits[i]>digits[0]){
-          di = i-1;
+          di = i;
           break;
         }
       }
+
       if(i==digits.length){
-        di = i-1;
+        di = i;
+      }
+      di = di-1;
+      for(i=di;i>=0;i--){
+        if(digits[i]==digits[0]){
+          di--;
+        }else{
+          break;
+        }
       }
       tindex = delcount+di;
-      md = digits[0];
     }else{
       //move the min
       sindex = lmin+delcount;
       tindex = delcount;
-      md = min;
     }
   }  
-  
+  var md = srcd[sindex];
   srcd.splice(sindex,1);//在原来位置删除选中的数
   srcd.splice(tindex,0,md);//在目标位置插入选中的数
   str = srcd.join('');
@@ -835,9 +777,7 @@ function smallest(n) {
   return result;  
 
   function findLastMinNotCon(){
-    //select the d that need to move
     var lastMinNC = digits.lastIndexOf(min);
-    var md;
     for(i=lastMinNC-1;i>=0;i--){
       if(digits[i]==min){
         lastMinNC--;
@@ -847,9 +787,18 @@ function smallest(n) {
     }
     return lastMinNC;
   }
-
+  function findFirstMinNotCon(){
+    var lastMinNC = digits.indexOf(min);
+    for(i=lastMinNC+1;i<=digits.length;i++){
+      if(digits[i]==min){
+        lastMinNC++;
+      }else{
+        break;
+      }
+    }
+    return lastMinNC;
+  }
 }
-
  // a year is 365 days and a day is 24 hours.1 hour is 60 minites,1minite is 60 seconds
 function formatDuration (seconds) {
   console.log(seconds);
